# gydpdict-svn

branches/gydpdict-0.1.x/: AUTHORS  NEWS  PkgConfig.cmake  gydp_config.h.in  gydpdict.desktop
branches/gydpdict-0.1.x/src/: gydp_app.h  gydp_conf.c  gydp_conf.h  gydp_dict.h  gydp_dict_sap.c  gydp_dict_sap.h  gydp_dict_ydp.h  gydp_util.c  gydp_util.h  gydp_window.c  gydp_window.h
trunk/: .session.vim  .tags  CMakeLists.txt  NEWS  gydpdict.desktop
trunk/.cmake/: CMakeCache.txt  gydp_config.h
trunk/src/: gydp_app.c  gydp_app.h  gydp_conf.c  gydp_conf.h  gydp_convert_sap.c  gydp_convert_ydp.c  gydp_dict.c  gydp_dict.h  gydp_dict_sap.c  gydp_dict_sap.h  gydp_dict_ydp.c  gydp_dict_ydp.h  gydp_global.c  gydp_global.h  gydp_list_data.c  gydp_list_data.h  gydp_list_view.c  gydp_list_view.h  gydp_util.c  gydp_util.h  gydp_window.c  gydp_window.h  main.c
